--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,27 +1,49 @@
-@media screen and (min-width: 480px) {
+
     .container {
-        width: 480px;
+        max-width: 428px;
+        padding-left: 16px;
+        padding-right: 16px;
         margin-left: auto;
         margin-right: auto;
-    }
-    .mobile-menu-open {
-        min-width: 32px;
         
     }
-    .mobile-menu-open-icon {
-        display: block;
-        stroke: 2E2F42;  
+    .header {
+        border-bottom: 1px solid #E7E9FC;
+    }
+    .logo {
+        color: var(--color-second-text);
+        font-family: 'Raleway';
+        font-weight: 800;
+        font-size: 18px;
+        line-height: 1.3;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+    }
+    .accent {
+        color:var(--color-accent);
+    }
+    .nav-header .logo {
+        padding-top: 24px;
+        padding-bottom: 24px;
     }
 
-    
-   
-}
-@media screen  and  (max-width:480px) {
     .site-nav {
         display: none;
     }
     .address {
         display: none;
     }
+     .mobile-menu-open {
+        
+        min-width: 32px;
+        border-color: transparent;
+        background-color: transparent; 
+    } 
+    .mobile-menu-open-icon {
+        
+        stroke: #2E2F42;  
+    } 
+
     
-}
+
+
