--- a/css/styles.css
+++ b/css/styles.css
@@ -16,12 +16,8 @@ body {
     font-size: 16px;
     line-height: 1.5;  
 }
-.container {
-    
-    padding: 0 15px;
-   
-}
 
+   
 .list {
     list-style:none ;
 }
@@ -61,139 +57,25 @@ img {
 }
 
 /*----------------------------------HEADER*/
-.header {
-    border-bottom: 1px solid #E7E9FC;
-}
 
-.main-header {
-    display: flex;
-    align-items: center;
-    justify-content:space-between;
-}
-
-.nav-header { 
-    display: flex;
-    align-items: center;
-}
-
-.accent {
-    color:var(--color-accent);
-}
-
-.logo {
-    color: var(--color-second-text);
-    font-family: 'Raleway';
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 1.3;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;      
-}
-
-.nav-header .logo {
-    padding-top: 24px;
-    padding-bottom: 24px;
-}
-
-.site-nav {
-    display: flex;
-    margin-left: 76px;
-}
-
-.site-nav .nav-list:not(:last-child) {
-    margin-right: 40px;
-}
-
-
-.site-nav .nav-link {
-    display: block;
-    padding-top: 24px;
-    padding-bottom: 24px;
-    transition: color var(--hover-transition);
-}
-
-.site-nav .nav-link {
-    color: var(--color-second-text);
-    font-weight: 500; 
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;   
-       
-}
-
-.site-nav .nav-link:hover,
-.site-nav .nav-link:focus {
-    color: var(--color-hover);
-}
-
-.nav-link.current {
-    position: relative;
-    color: var(--color-hover);
-}
-
-.current::after {
-    position: absolute;
-    display: block;
-    content: '';
-    width: 100%;
-    height: 4px;
-    left: 0;
-    bottom: -1px;
-    border-radius: 2px;
-    background-color: var(--color-hover);
-    transition: color var(--hover-transition);
-}
-
+/* 
 
 .icon-line {
    display: flex ;
    align-items: end;
 }
-.address {
-    font-style: normal;
-    letter-spacing: 0.02em; 
-}
 
-.site-auth {
-    display: flex;
-    align-items: center; 
-}
 
-.letter,
+
+
+
 .component-text {
     color: var(--color-main-text);   
 }
 
-.letter {
-    display: block;
-    padding-top: 24px;
-    padding-bottom: 24px;
-    transition: color  var(--hover-transition);
-    
-}
-
-.site-auth .letter:hover,
-.site-auth .letter:focus {
-    color: var(--color-hover)
-}
-
-.phone {
-    color: var(--color-main-text);
-    display: block;
-    padding-top: 24px;
-    padding-bottom: 24px;
-    transition: color var(--hover-transition);
-}
-.site-auth .phone:hover,
-.site-auth .phone:focus {
-    color: var(--color-hover);
-}
-.contacts:not(:last-child) {
-    margin-right: 40px;
-}
-
+ */
 /* ----------------------------------HERO */
-.section-hero {
+/* .section-hero {
     background-color: var(--color-second-text);  
     padding-top: 188px;
     padding-bottom: 188px;
@@ -207,10 +89,10 @@ img {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-}
+} */
         
 
-
+/* 
 .section-title {
     color: var(--background-white-color);
     font-size: 56px;
@@ -222,11 +104,11 @@ img {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 48px;       
-}
+} */
 
 
 /* ------------------------BUTTON PRIMARY */
-.primary-button {
+/* .primary-button {
     background-color: var(--color-accent);
     color: var(--background-white-color);
     cursor: pointer;
@@ -251,14 +133,14 @@ img {
 .primary-button:focus {
     background-color: var(--color-hover);
     color:var(--background-white-color)
-}
+} */
 /*----------------------------SECTION-WORK*/
-.section-team {
+/* .section-team {
     padding-top: 120px;
     padding-bottom: 120px;
-}
+} */
 
-.section-second-title {
+/* .section-second-title {
     color:var(--color-second-text) ;
     font-size: 36px;
     line-height: 1.1;
@@ -267,9 +149,9 @@ img {
     text-align: center;
 
     margin-bottom: 72px;     
-}
+} */
 
-.component-title {
+/* .component-title {
     display: flex;    
 }
 
@@ -279,8 +161,8 @@ img {
 
 .team-list {
 width: calc((100% - 72px) / 4);
-}
-
+} */
+/* 
 .team-picture {
     display: flex;
     align-items: center;
@@ -289,7 +171,7 @@ width: calc((100% - 72px) / 4);
     height: 112px;
     margin-bottom: 8px;
     background-color: var(--color-second-white);
-}
+}  */
 /* ------------------------------OUR-TEAM */
 .items {
     display:flex;   
