--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,6 +1,102 @@
 @media screen and (min-width:768px) {
     .container {
-width: 766px;
+        max-width: 766px;
 
     }
+    .main-header {
+        display: flex;
+        align-items: center;
+        justify-content:space-between;
+    }
+    .nav-header { 
+        display: flex;
+        align-items: center;
+    }
+    .nav-header .logo {
+        padding-bottom: 22px;
+    }
+    .site-nav {
+        display: flex;
+        margin-left: 120px;
+    }
+    
+    .site-nav .nav-list:not(:last-child) {
+        margin-right: 40px;
+    }
+    .site-nav .nav-link {
+        display: block;
+        padding-top: 24px;
+        padding-bottom: 24px;
+        transition: color var(--hover-transition);
+    
+}
+.site-nav .nav-link {
+    color: var(--color-second-text);
+    font-weight: 500; 
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;   
+       
+}
+.site-nav .nav-link:hover,
+.site-nav .nav-link:focus {
+    color: var(--color-hover);
+}
+
+.nav-link.current {
+    position: relative;
+    color: var(--color-hover);
+}
+.address {
+    display: flex;
+    font-style: normal;
+    font-size: 12px;
+    line-height: calc(14px / 12px);
+    letter-spacing: 0.04em; 
+    color: var(--color-main-text); 
+}
+.site-auth {
+    display: block;
+     
+}
+.letter {
+    color: var(--color-main-text);   
+}
+.mobile-menu-open {
+    display: none;
+}
+.letter {
+    display: block;
+    padding-top:  24px; ;
+    transition: color  var(--hover-transition);
+    
+}
+.site-auth .letter:hover,
+.site-auth .letter:focus {
+    color: var(--color-hover);
+}
+.phone {
+    color: var(--color-main-text);
+    display: block;
+    padding-bottom: 12px;
+    margin-top: 6px;
+    transition: color var(--hover-transition);
+}
+.site-auth .phone:hover,
+.site-auth .phone:focus {
+    color: var(--color-hover);
+}
+.current::after {
+    position: absolute;
+    display: block;
+    content: '';
+    width: 100%;
+    height: 4px;
+    left: 0;
+    bottom: -1px;
+    border-radius: 2px;
+    background-color: var(--color-hover);
+    transition: color var(--hover-transition);
+}
+
 }
