--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,4 +1,15 @@
 
+:root {
+    --background-white-color:#FFFFFF;
+    --color-hover:#404BBF;
+    --color-main-text:#434455;
+    --color-accent:#4D5AE5;
+    --color-second-text:#2E2F42;
+    --color-second-white: #F4F4FD;
+    --color-border:#8E8F99;
+    --hover-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
     .container {
         max-width: 428px;
         padding-left: 16px;
@@ -10,6 +21,7 @@
     .header {
         border-bottom: 1px solid #E7E9FC;
     }
+    
     .logo {
         color: var(--color-second-text);
         font-family: 'Raleway';
@@ -33,17 +45,79 @@
     .address {
         display: none;
     }
+    .main-header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding-top: 24px;
+        padding-bottom: 24px;
+    }
      .mobile-menu-open {
-        
-        min-width: 32px;
-        border-color: transparent;
-        background-color: transparent; 
+        width: 32px;
+        height: 22px;
+        border: none;
+        background-color: transparent;
+        padding: 0; 
     } 
     .mobile-menu-open-icon {
-        
-        stroke: #2E2F42;  
+         stroke: var(--color-second-text);  
     } 
+    .mobile-menu {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        z-index: 100;
+        background-color: var(--background-white-color);
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
 
+
+    }
+    .mobile-menu.is-hidden {
+        opacity: 1;
+        visibility: visible;
+        pointer-events: none;
+    }
+    .mobile-menu-close {
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 24px;
+        height: 24px;
+        top: 24px;
+        right: 16px;
+        border-radius: 50%;
+        border:1px solid rgba(0, 0, 0, 0.1); ;
+        background: #E7E9FC;
+        cursor: pointer;
+    }
+    .mobaile-menu-container {
+        position: relative;
+    }
+    .mobile-menu-close-icon {
+    }
+    .mobile-site-nav {
+    }
+    .mobile-site-list {
+    }
+    .list {
+    }
+    .mobile-nav-link {
+    }
+    .link {
+    }
+    .mobile-site-auth {
+    }
+    .mobile-contacts {
+    }
+    .mobile-phone {
+    }
+    .mobile-letter {
+    }
     
 
 
