--- a/css/mobile.css
+++ b/css/mobile.css
@@ -73,10 +73,12 @@
         opacity: 0;
         visibility: hidden;
         pointer-events: none;
+        transition: visibility var(--hover-transition),
+        opacity var(--hover-transition);
 
 
     }
-    .mobile-menu.is-hidden {
+    .mobile-menu.is-open {
         opacity: 1;
         visibility: visible;
         pointer-events: none;
@@ -95,28 +97,74 @@
         background: #E7E9FC;
         cursor: pointer;
     }
-    .mobaile-menu-container {
+    .mobile-menu-container {
         position: relative;
+        
+        
     }
-    .mobile-menu-close-icon {
+    .mobile-menu-wrap {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
     }
+    
     .mobile-site-nav {
+        display: flex;
+        flex-direction: column ;
+        gap: 40px;
+        
     }
     .mobile-site-list {
     }
-    .list {
-    }
+    
     .mobile-nav-link {
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 36px;
+        line-height:1.1;
+        letter-spacing: 0.02em;
+        color: #2E2F42;
+        text-transform: capitalize;
     }
-    .link {
-    }
+   
     .mobile-site-auth {
+        margin-top: auto;
     }
     .mobile-contacts {
     }
     .mobile-phone {
     }
     .mobile-letter {
+    }
+    .mobile-site-list {
+        display: flex;
+        gap: 56px;
+        align-items: flex-end;
+       
+    }
+    
+    .mobile-site-list-item {
+        width: 40px;
+        height: 40px;
+    }
+    .mobile-site-link {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        background: #4D5AE5;
+        border-radius: 50%;
+        transition: background-color var(--hover-transition);
+
+    }
+    .mobile-site-link:hover,
+    .mobile-site-link:focus {
+        background-color: var(--color-hover);
+    }
+    .mobile-svg {
+
     }
     
 
