--- a/css/styles.css
+++ b/css/styles.css
@@ -293,7 +293,7 @@ width: calc((100% - 48px) / 3);
        
 }
 /* --------------------------------OVERLaY */
-.product-thumb {
+/* .product-thumb {
     position: relative;
     overflow: hidden;  
 }
@@ -324,9 +324,9 @@ width: calc((100% - 48px) / 3);
 .link-card {
     display: block;
     transition: box-shadow var(--hover-transition);
-}
+} */
 
-.link-card:hover,
+/* .link-card:hover,
 .link-card:focus {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
                 0px 1px 1px rgba(46, 47, 66, 0.16),
@@ -337,9 +337,9 @@ width: calc((100% - 48px) / 3);
     border: 1px solid #E7E9FC;  
     border-top: none;
     padding: 32px 16px ; 
-}
+} */
 /* ------------------------------------------BUTTON */
-.button {
+/* .button {
     background-color: var(--color-second-white);
     color: var(--color-accent);
     cursor: pointer;
@@ -356,9 +356,9 @@ width: calc((100% - 48px) / 3);
     transition: background-color var(--hover-transition),
     color var(--hover-transition), border-color var(--hover-transition),
     box-shadow var(--hover-transition) ;
-}
+} */
 
-.button:hover,
+/* .button:hover,
 .button:focus {
     background-color:var(--color-hover);
     color:var(--background-white-color);
@@ -375,14 +375,14 @@ width: calc((100% - 48px) / 3);
 
 .button-list .second-button:not(:last-child) {
     margin-right: 24px;
-}
+} */
 /* -----------------------------------------CUSTOMERS*/
-.section-customers {
+/* .section-customers {
     padding-top: 130px;
     padding-bottom: 120px;
-}
+} */
 
-.customers-title {
+/* .customers-title {
     color: var(--color-second-text);
     font-size: 36px;
     line-height: 1.1;
@@ -415,7 +415,7 @@ width: calc((100% - 48px) / 3);
 .customers-link:focus {
     fill:var(--color-hover);
     border-color: var(--color-hover);
-}
+} */
 
 /*--------------------==----------------------FOOTER */
 
@@ -540,12 +540,12 @@ width: calc((100% - 48px) / 3);
 
 
 /* -----------------------------------------MODaL*/
-.backdrop.is-hidden {
+/* .backdrop.is-hidden {
     opacity: 0;
     pointer-events: none;   
     visibility: hidden;
-}
-.backdrop {
+} */
+/* .backdrop {
     position: fixed;
     z-index: 100; 
     top: 0;
@@ -556,8 +556,8 @@ width: calc((100% - 48px) / 3);
     transition: visibility var(--hover-transition),
      opacity var(--hover-transition);  
     
-}
-.modal {
+} */
+/* .modal {
     position:absolute;
     padding-top: 72px ;
     padding-left: 24px;
@@ -572,7 +572,7 @@ width: calc((100% - 48px) / 3);
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
 
-}
+} */
 
 .modal-btn {
     position: absolute;
@@ -598,7 +598,7 @@ width: calc((100% - 48px) / 3);
     fill: var(--background-white-color);
 }
 
-.modal-title {
+/* .modal-title {
     display: block;
     
     margin-bottom: 16px;
@@ -607,8 +607,8 @@ width: calc((100% - 48px) / 3);
     text-align: center;
     letter-spacing: 0.02em;
      color: #2E2F42;
-}
-.modal-wrap {
+} */
+/* .modal-wrap {
     display: block;
     position: relative;
     margin-bottom: 16px;
@@ -629,7 +629,7 @@ width: calc((100% - 48px) / 3);
     background-color: transparent;
     transition: border-color var(--hover-transition);
     
-}
+} */
 .modal-input:focus,
 .modal-input:hover {
     border-color: var(--color-accent);
