--- a/css/styles.css
+++ b/css/styles.css
@@ -8,24 +8,19 @@
     --color-border:#8E8F99;
     --hover-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 body {
     background-color:var(--background-white-color) ;
     color:var(--color-main-text);
     font-family:'Roboto',sans-serif;   
     font-size: 16px;
     line-height: 1.5;  
-}
-
-   
+} 
 .list {
     list-style:none ;
 }
-
 .link {
     text-decoration: none;
 }
-
 .visually-hidden {
     position: absolute;
     white-space: nowrap;
@@ -64,76 +59,10 @@ img {
    display: flex ;
    align-items: end;
 }
-
-
-
-
-
 .component-text {
     color: var(--color-main-text);   
 }
-
  */
-/* ----------------------------------HERO */
-/* .section-hero {
-    background-color: var(--color-second-text);  
-    padding-top: 188px;
-    padding-bottom: 188px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    max-width: 1440px;
-    background-image:linear-gradient(to right, rgba(46, 47, 66, 0.7),
-    rgba(46, 47, 66, 0.7)),
-     url('../images/people-office.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-} */
-        
-
-/* 
-.section-title {
-    color: var(--background-white-color);
-    font-size: 56px;
-    line-height: 1.1;
-    letter-spacing: 0.02em;
-    text-align: center;
-    text-transform: capitalize;
-    width: 496px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 48px;       
-} */
-
-
-/* ------------------------BUTTON PRIMARY */
-/* .primary-button {
-    background-color: var(--color-accent);
-    color: var(--background-white-color);
-    cursor: pointer;
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    border: none;
-    text-align: center;
-
-    border-radius: 4px;
-    padding: 16px 32px;
-    min-width: 169px;
-    min-height: 56px; 
-    transition: background-color var(--hover-transition),
-    color var(--hover-transition); 
-            
-}
-
-.primary-button:hover,
-.primary-button:focus {
-    background-color: var(--color-hover);
-    color:var(--background-white-color)
-} */
 /*----------------------------SECTION-WORK*/
 /* .section-team {
     padding-top: 120px;
@@ -173,7 +102,7 @@ width: calc((100% - 72px) / 4);
     background-color: var(--color-second-white);
 }  */
 /* ------------------------------OUR-TEAM */
-.items {
+/* .items {
     display:flex;   
 }
 
@@ -186,9 +115,9 @@ width: calc((100% - 48px) / 3);
 }
 .section-list-staff {
     display: flex;
-}
+} */
 
-.section-second-title-team { 
+/* .section-second-title-team { 
     color:var(--color-second-text) ;
     font-size: 36px;
     line-height: 1.1;
@@ -197,9 +126,9 @@ width: calc((100% - 48px) / 3);
     text-align: center;
 
     margin-bottom: 72px;
-}
+} */
 
-.section-staff-name,
+/* .section-staff-name,
 .components-item {
     color:var(--color-second-text) ;
     font-weight: 500;
@@ -242,8 +171,8 @@ width: calc((100% - 48px) / 3);
 .site-icon {
     width: 40px;
     height: 40px;   
-}
-.site-link{
+} */
+/* .site-link{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -253,9 +182,9 @@ width: calc((100% - 48px) / 3);
     border-radius: 50%;
     transition: background-color var(--hover-transition);
     
-}
+} */
 
-.site-link:hover,
+/* .site-link:hover,
 .site-link:focus {
     background-color: var(--color-hover);
 }
@@ -273,9 +202,9 @@ width: calc((100% - 48px) / 3);
 
 .section-work {
     padding-bottom: 120px;
-}
+} */
 /* -----------------------------PORTFOLIO */
-.section-portfolio {
+/* .section-portfolio {
     padding-top: 96px;
     padding-bottom: 120px;
 }
@@ -291,7 +220,7 @@ width: calc((100% - 48px) / 3);
     flex-basis: calc((100% - 2 * 24px) / 3);
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
        
-}
+} */
 /* --------------------------------OVERLaY */
 /* .product-thumb {
     position: relative;
@@ -419,7 +348,7 @@ width: calc((100% - 48px) / 3);
 
 /*--------------------==----------------------FOOTER */
 
-.footer {
+/* .footer {
     background-color: var(--color-second-text);
     padding-top: 100px; 
     padding-bottom: 100px;
@@ -427,10 +356,10 @@ width: calc((100% - 48px) / 3);
 }
 .footer-section {
     display: flex;
-}
+} */
 
 
-.accent-footer {
+/* .accent-footer {
     color:var(--color-second-white) ;
 }
 
@@ -440,8 +369,8 @@ width: calc((100% - 48px) / 3);
     width: 264px;
     margin-right: 120px;
     margin-top: 16px;
-}
-.footer-contact-title {
+} */
+/* .footer-contact-title {
     display: block;
     font-weight: 500;
     font-size: 16px;
@@ -449,8 +378,8 @@ width: calc((100% - 48px) / 3);
     letter-spacing: 0.02em;
     color:var(--background-white-color);
 
-}
-.footer-contact {
+} */
+/* .footer-contact {
     width: 208px;
     height: 80px;
 }
@@ -461,12 +390,12 @@ width: calc((100% - 48px) / 3);
     margin-top: 16px;
     gap: 16px;
 
-}
-.footer-list-item {
+} */
+/* .footer-list-item {
     width: calc((100% - 3 * 16px) / 4);
     height: 40px;
-}
-.footer-link {
+} */
+/* .footer-link {
    display: flex;
    width: 100%;
    height: 100%;
@@ -484,9 +413,9 @@ width: calc((100% - 48px) / 3);
 }
 .footer-subscribe {
     margin-left: auto;
-}
+} */
 
-.footer-subscribe-title {
+/* .footer-subscribe-title {
     display: block;
     font-size: 16px;
     line-height: calc(24 / 16);
@@ -531,12 +460,12 @@ width: calc((100% - 48px) / 3);
     justify-content: center;
     align-items: center;
     transition: background-color var(--hover-transition);
-}
+} */
 
-.footer-btn:focus,
+/* .footer-btn:focus,
 .footer-btn:hover {
     background: var(--color-hover);
-}
+} */
 
 
 /* -----------------------------------------MODaL*/
@@ -574,7 +503,7 @@ width: calc((100% - 48px) / 3);
 
 } */
 
-.modal-btn {
+/* .modal-btn {
     position: absolute;
     display: flex;
     align-items: center;
@@ -596,7 +525,7 @@ width: calc((100% - 48px) / 3);
 .modal-btn:focus {
     background: var(--color-hover);
     fill: var(--background-white-color);
-}
+} */
 
 /* .modal-title {
     display: block;
@@ -630,7 +559,7 @@ width: calc((100% - 48px) / 3);
     transition: border-color var(--hover-transition);
     
 } */
-.modal-input:focus,
+/* .modal-input:focus,
 .modal-input:hover {
     border-color: var(--color-accent);
 }
@@ -668,9 +597,9 @@ width: calc((100% - 48px) / 3);
     cursor: pointer;
     transition: background-color var(--hover-transition);
 
-}
+} */
 
-.check-btn:focus,
+/* .check-btn:focus,
 .check-btn:hover {
     background-color: var(--color-hover);
 }
@@ -743,4 +672,4 @@ textarea:hover {
     clip: rect(0,0,0,0);
     white-space: nowrap;
     border: 0;
-  }
+  } */
