--- a/css/mobile.css
+++ b/css/mobile.css
@@ -242,13 +242,251 @@
                 
     }
     
-    .primary-button:hover,
-    .primary-button:focus {
-        background-color: var(--color-hover);
-        color:var(--background-white-color)
+.primary-button:hover,
+.primary-button:focus {
+    background-color: var(--color-hover);
+    color:var(--background-white-color)
     } 
+.backdrop {
+    position: fixed;
+    z-index: 100; 
+    top: 0;
+    left: 0;
+    width: 100%;
+    height:100%;
+    background-color:rgba(46, 47, 66, 0.4);
+    transition: visibility var(--hover-transition),
+    opacity var(--hover-transition);  
+}
+.modal {
+    position:absolute;
+    padding-top: 72px ;
+    padding-left: 16px;
+    padding-right: 16px;
+    width: 392px;
+    min-height: 586px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 1; 
+    background: #FCFCFC;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    }
+.modal-btn {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    width: 24px;
+    height: 24px;
+    top: 24px;
+    right: 24px;
+    background: #E7E9FC;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    cursor: pointer;  
+    fill: #000000;
+    transition: background-color var(--hover-transition),
+    fill var(--hover-transition);
+    }
+.modal-btn:hover,
+.modal-btn:focus {
+    background: var(--color-hover);
+    fill: var(--background-white-color);
+    }
+.modal-title {
+    display: block;
+    margin-bottom: 16px;
+    font-size: 16px;
+    line-height: 1.5;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+    }
+.modal-label {
+    display: block;
+    margin-bottom: 8px;
+    }
+.modal-wrap {
+    display: block;
+    position: relative;
+    }
+   
+.modal-input {
+    display: block;
+    width: 100%;
+    height: 40px;
+    padding-left: 26px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    outline: none;
+    background-color: transparent;
+    transition: border-color var(--hover-transition);
+    
+} 
+.modal-input:focus,
+.modal-input:hover {
+    border-color: var(--color-accent);
+}
+.modal-input:focus + .modal-icon,
+.modal-input:hover + .modal-icon {
+    fill: var(--color-accent);
+}
+.modal-name {
+    display: block;
+    margin-bottom: 4px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: calc(14 / 12);
+    letter-spacing: 0.01em;
+    color: #8E8F99;
+} 
+.modal-icon {
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%); 
+    transition: fill var(--hover-transition);
+}
+.check-btn {
+    display: block;
+    margin: 24px auto 0;
+    min-width: 169px;
+    height: 56px;
+    color: var(--background-white-color);
+    background: var(--color-accent);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border-color: transparent;
+    cursor: pointer;
+    transition: background-color var(--hover-transition);
 
-@media screen and (min-width:320px)  and (max-width:480px) {
+} 
+.check-btn:focus,
+.check-btn:hover {
+    background-color: var(--color-hover);
+}
+textarea {
+    display: block;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: calc(14 / 12);
+    letter-spacing: 0.04em;
+    padding-top: 8px;
+    padding-left: 16px;
+    outline: none;
+    color: rgba(117, 117, 117, 0.5);
+    width: 100%;
+    height: 120px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    resize: none;
+    transition: border-color var(--hover-transition); 
+}
+textarea:focus,
+textarea:hover {
+    border-color: var(--color-accent);
+}
+.policy {
+    color: var(--color-accent);
+    text-decoration: underline;
+}
+.modal-checkbox {
+    display: flex;
+    margin-top: 18px;
+    align-items: center;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: calc(14 / 12);
+    letter-spacing: 0.04em;
+    color: #757575;
+}
+.check-box {
+    display: inline-block;
+    margin-right: 8px;
+    width: 16px;
+    height: 16px;
+    flex-shrink: 0;
+    transform: translate(0);
+    border: 1.25px solid var(--color-second-text);
+    border-radius: 2px;   
+}
+.modal-check:checked + .check-box {
+    background: var(--color-hover);
+    border: inherit;
+    background-image: url('../images/Vector.svg');
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-origin: content-box;
+    background-position: center;
+}
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    white-space: nowrap;
+    border: 0;
+  }
+  .backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;   
+    visibility: hidden;
+} 
+.section-team {
+    padding-top: 96px;
+    padding-bottom: 96px;
+}
+.section-second-title {
+    color:var(--color-second-text) ;
+    font-size: 36px;
+    line-height: 1.1;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    text-align: center;
+
+    margin-bottom: 72px;     
+}
+.component-title {
+    display: block;    
+}
+.team-list {
+    width:100% ;
+    
+}
+.team-list:not(:last-child) {
+    margin-bottom: 72px;
+}
+.components-item {
+    font-size: 36px;
+    line-height: 1.1;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2E2F42;
+    margin-bottom: 8px;
+
+}
+.components-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color:  #434455;
+  
+}
+.team-picture {
+    display: none;
+}
+
+
+
+@media screen and (min-width:320px)  and (max-width:427px) {
     .mobile-phone {
         font-family: 'Roboto';
         font-style: normal;
@@ -267,7 +505,11 @@
         width: 250px;
         font-size: 28px;
         line-height: 1.1;
-        
-       
+    }
+    .modal {
+        max-width: 290px ;
+    }
+    .modal-title {
+        font-size: 12px;
     }
 }
