--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,6 @@ body {
     clip-path: inset(50%);
     margin: -1px;
 }
-
 h1,
 h2,
 h3,
@@ -51,18 +50,14 @@ img {
     height: auto;
 }
 
-/*----------------------------------HEADER*/
-
-/* 
-
-.icon-line {
+/* .icon-line {
    display: flex ;
    align-items: end;
 }
 .component-text {
     color: var(--color-main-text);   
-}
- */
+} */
+ 
 /*----------------------------SECTION-WORK*/
 /* .section-team {
     padding-top: 120px;
@@ -466,210 +461,3 @@ width: calc((100% - 48px) / 3);
 .footer-btn:hover {
     background: var(--color-hover);
 } */
-
-
-/* -----------------------------------------MODaL*/
-/* .backdrop.is-hidden {
-    opacity: 0;
-    pointer-events: none;   
-    visibility: hidden;
-} */
-/* .backdrop {
-    position: fixed;
-    z-index: 100; 
-    top: 0;
-    left: 0;
-    width: 100%;
-    height:100%;
-    background-color:rgba(46, 47, 66, 0.4);
-    transition: visibility var(--hover-transition),
-     opacity var(--hover-transition);  
-    
-} */
-/* .modal {
-    position:absolute;
-    padding-top: 72px ;
-    padding-left: 24px;
-    padding-right: 24px;
-    width: 408px;
-    min-height: 576px;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    opacity: 1; 
-    background: #FCFCFC;
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-
-} */
-
-/* .modal-btn {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0;
-    width: 24px;
-    height: 24px;
-    top: 24px;
-    right: 24px;
-    background: #E7E9FC;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 50%;
-    cursor: pointer;  
-    fill: #000000;
-    transition: background-color var(--hover-transition),
-    fill var(--hover-transition);
-}
-.modal-btn:hover,
-.modal-btn:focus {
-    background: var(--color-hover);
-    fill: var(--background-white-color);
-} */
-
-/* .modal-title {
-    display: block;
-    
-    margin-bottom: 16px;
-    font-size: 16px;
-    line-height: 24px;
-    text-align: center;
-    letter-spacing: 0.02em;
-     color: #2E2F42;
-} */
-/* .modal-wrap {
-    display: block;
-    position: relative;
-    margin-bottom: 16px;
-    
-}
-.modal-label {
-    display: block;
-    margin-bottom: 8px;
-}
-.modal-input {
-    display: block;
-    width: 100%;
-    height: 40px;
-    padding-left: 38px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    outline: none;
-    background-color: transparent;
-    transition: border-color var(--hover-transition);
-    
-} */
-/* .modal-input:focus,
-.modal-input:hover {
-    border-color: var(--color-accent);
-}
-.modal-input:focus + .modal-icon,
-.modal-input:hover + .modal-icon {
-    fill: var(--color-accent);
-}
-.modal-name {
-    display: block;
-    margin-bottom: 4px;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: calc(14 / 12);
-    letter-spacing: 0.01em;
-    color: #8E8F99;
-} 
-.modal-icon {
-    position: absolute;
-    top: 50%;
-    left: 10px;
-    transform: translateY(-50%); 
-    transition: fill var(--hover-transition);
-}
-
-.check-btn {
-    display: block;
-    margin: 24px auto 0;
-    min-width: 169px;
-    height: 56px;
-    color: var(--background-white-color);
-    background: var(--color-accent);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    border-color: transparent;
-    cursor: pointer;
-    transition: background-color var(--hover-transition);
-
-} */
-
-/* .check-btn:focus,
-.check-btn:hover {
-    background-color: var(--color-hover);
-}
-textarea {
-    display: block;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: calc(14 / 12);
-    letter-spacing: 0.04em;
-    padding-top: 8px;
-    padding-left: 16px;
-    outline: none;
-    color: rgba(117, 117, 117, 0.5);
-    width: 100%;
-    height: 120px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    resize: none;
-    transition: border-color var(--hover-transition); 
-}
-textarea:focus,
-textarea:hover {
-    border-color: var(--color-accent);
-}
-
-.policy {
-    color: var(--color-accent);
-    text-decoration: underline;
-}
-
-.modal-checkbox {
-    display: flex;
-    align-items: center;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: calc(14 / 12);
-    letter-spacing: 0.04em;
-    color: #757575;
-    
-}
-.check-box {
-    display: inline-block;
-    margin-right: 8px;
-    width: 16px;
-    height: 16px;
-    
-    transform: translate(0);
-    border: 1.25px solid var(--color-second-text);
-    border-radius: 2px;
-    
-}
-.modal-check:checked + .check-box {
-    background: var(--color-hover);
-    border: inherit;
-    background-image: url('../images/Vector.svg');
-    background-repeat: no-repeat;
-    background-size: auto;
-    background-origin: content-box;
-    background-position: center;
-}
-
-
-.visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0,0,0,0);
-    white-space: nowrap;
-    border: 0;
-  } */
