--- a/css/tablet.css
+++ b/css/tablet.css
@@ -119,4 +119,26 @@
     font-size: 56px;
     line-height: 1.1;
 }
+
+.modal {
+    padding-top: 72px ;
+    padding-left: 24px;
+    padding-right: 24px;
+    width: 408px;
+    min-height: 586px;
+
+}
+.modal-input {
+    padding-left: 38px;
+}
+.section-team {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+.component-title {
+    display: flex;    
+}
+.components-item {
+    text-align:left;
+}
 }
