--- a/css/tablet.css
+++ b/css/tablet.css
@@ -131,14 +131,47 @@
 .modal-input {
     padding-left: 38px;
 }
-.section-team {
-    padding-top: 120px;
-    padding-bottom: 120px;
-}
+
 .component-title {
-    display: flex;    
+    display: flex;  
+    flex-direction: row; 
+    flex-wrap: wrap;
+    row-gap: 72px;
+    column-gap: 24px; 
 }
+.component-title .team-list {
+    width: calc((100% - 24px) / 2);
+    margin-bottom: 0;
+}
+
 .components-item {
     text-align:left;
+}
+.section-staff-block {
+    padding-bottom: 104px;
+    
+}
+.section-list-staff {
+    display: flex;
+}
+.card-list {
+    text-align: center;
+    padding: 32px 16px; 
+}
+.section-mob-staff {
+    width: 552px;
+    margin-left: auto;
+    margin-right: auto;
+    }
+
+
+
+}
+@media (min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+.section-hero{
+background-image:linear-gradient(to right, rgba(46, 47, 66, 0.7),
+rgba(46, 47, 66, 0.7)), url('../images/Dark-bg-tabl-2x.jpg');
 }
 }
