--- a/css/desktop.css
+++ b/css/desktop.css
@@ -95,10 +95,23 @@ max-width: 1158px;
     padding-top: 120px;
     padding-bottom: 120px;
 }
+.container-tablet{
+    max-width: 1158px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.customers-logo {
+    flex-wrap: nowrap;
+    gap: 24px;
+}
+.footer {
+    padding-top: 100px; 
+    padding-bottom: 100px;    
+    }
 
 
-
-
+}
 @media (min-device-pixel-ratio: 2),
 (min-resolution: 192dpi),
 (min-resolution: 2dppx) {
