--- a/css/mobile.css
+++ b/css/mobile.css
@@ -565,8 +565,155 @@ textarea:hover {
 }
 .customers-logo {
     display: flex;
+    flex-wrap: wrap;
+    column-gap: 16px;
+    row-gap: 72px;
 }
+.customers-item {
+    width: 190px;
+    height: 88px;
+}
+.customers-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%; 
+    border: 1px solid var(--color-border);
+    border-radius: 4px;
+    fill: var(--color-border); 
+    transition: fill var(--hover-transition),
+    border-color var(--hover-transition);   
+}
+.customers-link:hover,
+.customers-link:focus {
+    fill:var(--color-hover);
+    border-color: var(--color-hover);
+} 
+.footer {
+    background-color: var(--color-second-text);
+    padding-top: 96px; 
+    padding-bottom: 96px;
+    
+}
+.footer-section {
+    display: block;
+}
+.footer-content {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 72px;
+}
+.accent-footer {
+    color:var(--color-second-white) ;
+}
+.footer-text {
+    display: block;
+    color: #E7E9FC;
+    width: 268px;
+    text-align: left;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 16px;
+} 
+.footer-contact {
+    width: 208px;
+    height: 80px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 72px;
+}
+.footer-contact-title {
+    display: block;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color:var(--background-white-color);
+} 
+.footer-list {
+    display: flex;
+    width: 208px;
+    height: 40px;
+    margin-top: 16px;
+    gap: 16px;
 
+} 
+.footer-list-item {
+    width: 40px;
+    height: 40px;
+    
+} 
+.footer-link {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    fill: var(--color-second-white);
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+    transition: background-color var(--hover-transition);
+ 
+ }
+ .footer-link:hover,
+ .footer-link:focus {
+     background-color: #31D0AA;
+ }
+
+.footer-subscribe-title {
+    display: block;
+    font-size: 16px;
+    line-height: calc(24 / 16);
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
+    text-align: center;
+    color: var(--background-white-color);
+}
+.footer-blok {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+    
+}
+.footer-input {
+    width: 396px ; 
+    height: 40px;
+    color: rgba(255, 255, 255, 0.6);
+    font-weight: 400;
+    font-size: 12px;
+    line-height: calc(24 / 12);
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    background-color: inherit;
+    border-radius: 4px;
+    outline: none;
+}
+.footer-input:focus {
+    color: #FFFFFF;
+    border-color: #FFFFFF; 
+}
+.footer-btn {
+    display: flex;
+    width: 165px;
+    height: 40px;
+    cursor: pointer;
+    gap: 16px;
+    color: var(--background-white-color);
+    background: var(--color-accent);
+    border-radius: 4px;
+    border-color: transparent;
+    justify-content: center;
+    align-items: center;
+    transition: background-color var(--hover-transition);
+}
+.footer-btn:focus,
+.footer-btn:hover {
+    background: var(--color-hover);
+}
 
 @media screen and (min-width:320px)  and (max-width:427px) {
     .mobile-phone {
