--- a/css/tablet.css
+++ b/css/tablet.css
@@ -169,9 +169,22 @@
     margin-left: auto;
     margin-right: auto;
     }
+.container-tablet{
+    max-width: 552px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.customers-logo {
+    column-gap: 24px;
+    }
+.customers-item {
+    width: 168px;
+    }
+.footer-input {
+        width: 264px ;
+    }
 
-
-
+    
 }
 @media (min-device-pixel-ratio: 2),
 (min-resolution: 192dpi),
