--- a/css/tablet.css
+++ b/css/tablet.css
@@ -219,6 +219,16 @@
 }
 .section-site {
     display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 72px;
+    width: auto;  
+}
+.section-site .item:not(:last-child) {
+    margin-bottom: 0;
+}
+.item {
+    flex-basis: calc((100% - 24px) / 2);  
 }
     
 }
